# SyntheticTransits

./: .gitignore  .gitmodules  AlterTransit_8cpp.html  AlterTransit_8cpp_source.html  AlterTransit_8h.html  AlterTransit_8h_source.html  Analyse.py  Application_8h.html  Application_8h_source.html  Application__CopyObjectData_8cpp.html  Application__CopyObjectData_8cpp_source.html  Application__GenerateModel_8cpp.html  Application__GenerateModel_8cpp_source.html  Application__GetHDUData_8cpp.html  Application__GetHDUData_8cpp_source.html  Application__GetObject_8cpp.html  Application__GetObject_8cpp_source.html  Application__Go_8cpp.html  Application__Go_8cpp_source.html  Application__ObjectIndex_8cpp.html  Application__ObjectIndex_8cpp_source.html  Application__UpdateFile_8cpp.html  Application__UpdateFile_8cpp_source.html  CMakeLists.txt  CopyFileEfficiently_8cpp.html  CopyFileEfficiently_8cpp_source.html  CopyFileEfficiently_8h.html  CopyFileEfficiently_8h_source.html  Doxyfile  Exceptions_8h.html  Exceptions_8h_source.html  FuncGeometricTransit_8h.html  FuncGeometricTransit_8h_source.html  FuncIntensity_8cpp.html  FuncIntensity_8cpp_source.html  FuncIntensity_8h.html  FuncIntensity_8h_source.html  FuncOmega_8cpp.html  FuncOmega_8cpp_source.html  FuncOmega_8h.html  (+74 more)
debug/: CreateFile.py  SyntheticLightcurve.fits  SyntheticLightcurveConfig.xml  plot.py
include/: AlterTransit.h  Application.h  CopyFileEfficiently.h  CopyObjectData.h  CopyParameters.h  Exceptions.h  FuncGeometricTransit.h  FuncIntensity.h  FuncOmega.h  FuncSquare.h  GetSystemMemory.h  Lightcurve.h  ObjectSkipDefs.h  RemoveTransit.h  SortedIndex.h  ToStringList.h  ValidXML.h  WaspDateConverter.h  XMLParserPugi.h  config.h.in  constants.h  isnan.h  timer.h
models/: Model_r=0.10.xml  Model_r=0.10000.xml  Model_r=0.20.xml  Model_r=0.20000.xml  Model_r=0.30.xml  Model_r=0.30000.xml  Model_r=0.40.xml  Model_r=0.40000.xml  Model_r=0.50.xml  Model_r=0.50000.xml  Model_r=0.60.xml  Model_r=0.60000.xml  Model_r=0.70.xml  Model_r=0.70000.xml  Model_r=0.80.xml  Model_r=0.80000.xml  Model_r=0.90.xml  Model_r=0.90000.xml  Model_r=1.00.xml  Model_r=1.00000.xml  Model_r=1.10.xml  Model_r=1.10000.xml  Model_r=1.20.xml  Model_r=1.20000.xml  Model_r=1.30.xml  Model_r=1.30000.xml  Model_r=1.40.xml  Model_r=1.40000.xml  Model_r=1.50.xml  Model_r=1.50000.xml  Model_r=1.60.xml  Model_r=1.60000.xml  Model_r=1.70.xml  Model_r=1.70000.xml  Model_r=1.80.xml  Model_r=1.80000.xml  Model_r=1.90.xml  Model_r=1.90000.xml  Model_r=10.00.xml  Model_r=2.00.xml  (+90 more)
search/: all_5f.html  all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_69.html  all_6a.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  all_78.html  all_7e.html  classes_62.html  classes_63.html  classes_66.html  classes_6c.html  classes_6d.html  classes_6e.html  classes_78.html  defines_5f.html  files_61.html  files_63.html  files_66.html  files_67.html  files_6c.html  files_76.html  files_78.html  functions_61.html  functions_62.html  (+27 more)
src/: AlterTransit.cpp  Application_CopyObjectData.cpp  Application_GenerateModel.cpp  Application_GetHDUData.cpp  FuncOmega.cpp  (+15 more)
(+133 files in other folders)
